crates/data-dict/tests/snapshots/validate_schema__missing_version.snap
---
source: crates/data-dict/tests/validate_schema.rs
expression: "failing_diagnostic(\"invalid/missing-version.yaml\")"
---
Error: [Q-1-10] YAML Validation Failed
   ╭─[ invalid/missing-version.yaml:3:1 ]
   │
 3 │ tables: {}
   │ ─────┬─────  
   │      ╰─────── Missing required property '$version' (must be one of: "0.1.0")
───╯
✖ At document root
ℹ Schema constraint: object
ℹ Add the `$version` property to your YAML document?
