crates/data-dict/tests/snapshots/validate_schema__s02_missing_table.snap
---
source: crates/data-dict/tests/validate_schema.rs
expression: "failing_diagnostic(\"schema/s02-missing-table.yaml\")"
---
Error: [S07]
    ╭─[ schema/s02-missing-table.yaml:14:15 ]
    │
 14 │       - name: id
    │               ─┬  
    │                ╰── column `food.id` has type `number(id)` but is missing the expected `examples` property
────╯

Error: [S01]
    ╭─[ schema/s02-missing-table.yaml:18:15 ]
    │
 18 │       - name: food_category_id
    │               ────────┬───────  
    │                       ╰───────── column `food.food_category_id` is marked `foreign_key` but no `relationships` entry points it at a `primary_key` column
────╯

Error: [S07]
    ╭─[ schema/s02-missing-table.yaml:18:15 ]
    │
 18 │       - name: food_category_id
    │               ────────┬───────  
    │                       ╰───────── column `food.food_category_id` has type `number(id)` but is missing the expected `examples` property
────╯

Error: [S07]
    ╭─[ schema/s02-missing-table.yaml:28:15 ]
    │
 28 │       - name: id
    │               ─┬  
    │                ╰── column `food_category.id` has type `number(id)` but is missing the expected `examples` property
────╯

Error: [S02]
    ╭─[ schema/s02-missing-table.yaml:36:35 ]
    │
 36 │     join: food.food_category_id = category.id
    │                                   ─────┬─────  
    │                                        ╰─────── relationship references table `category`, which is not defined in `tables`
────╯
