crates/data-dict/tests/snapshots/validate_schema__s06_self_join_one_to_many.snap
---
source: crates/data-dict/tests/validate_schema.rs
expression: "failing_diagnostic(\"schema/s06-self-join-one-to-many.yaml\")"
---
Error: [S07]
    ╭─[ schema/s06-self-join-one-to-many.yaml:24:15 ]
    │
 24 │       - name: comments
    │               ────┬───  
    │                   ╰───── column `otters.comments` has type `string` but is missing the expected `examples` property
────╯

Error: [S06]
    ╭─[ schema/s06-self-join-one-to-many.yaml:30:18 ]
    │
 30 │     cardinality: one-to-many
    │                  ─────┬─────  
    │                       ╰─────── cardinality is `one-to-many` but the left-side join column on `otters` is not marked `primary_key` or `unique`
────╯
