crates/data-dict/tests/snapshots/validate_schema__s07_wrong_rep_on_enum.snap
---
source: crates/data-dict/tests/validate_schema.rs
expression: "failing_diagnostic(\"schema/s07-wrong-rep-on-enum.yaml\")"
---
Error: [S07]
    ╭─[ schema/s07-wrong-rep-on-enum.yaml:11:15 ]
    │
 11 │       - name: status
    │               ───┬──  
    │                  ╰──── column `t.status` has type `enum` but is missing the required `values` property
────╯

Error: [S07]
    ╭─[ schema/s07-wrong-rep-on-enum.yaml:11:15 ]
    │
 11 │       - name: status
    │               ───┬──  
    │                  ╰──── column `t.status` has type `enum` but uses `range`; enum columns represent their data with `values`
────╯
