crates/data-dict/tests/snapshots/validate_schema__s08_range_on_string_type.snap
---
source: crates/data-dict/tests/validate_schema.rs
expression: "failing_diagnostic(\"schema/s08-range-on-string-type.yaml\")"
---
Error: [S07]
    ╭─[ schema/s08-range-on-string-type.yaml:12:15 ]
    │
 12 │       - name: c
    │               ┬  
    │               ╰── column `t.c` has type `string` but is missing the expected `examples` property
────╯

Error: [S07]
    ╭─[ schema/s08-range-on-string-type.yaml:12:15 ]
    │
 12 │       - name: c
    │               ┬  
    │               ╰── column `t.c` has type `string` but uses `range`; `range` is only valid for `number(ordinal)`, `number(quantity)`, `date`, and `datetime`
────╯
